@@ -164,7 +164,7 @@ sudo apt install ruby
 
 /usr/local/redis/bin/redis-server /usr/local/redis-cluster/6001/redis.conf 
 
-redis-cli --cluster create 172.16.131.32:6001 172.16.131.32:6002 172.16.131.31:6003 172.16.131.31:6004 172.16.131.30:6005 172.16.131.30:6006 --cluster-replicas 1
+redis-cli --cluster create 121.43.180.239:6001 121.43.180.239:6002 47.96.65.118:6003 47.96.65.118:6004 47.99.68.19:6005 47.99.68.19:6006 --cluster-replicas 1 -a yfkn1#Z#1d
 
 cluster info
 cluster nodes
@@ -173,17 +173,13 @@ yfkn1#Z#1d
 ```
 
 ```
-redis-cli --cluster create 172.16.34.23:6001 172.16.34.23:6002 172.16.34.24:6003 172.16.34.24:6004 --cluster-replicas 1
+redis-cli --cluster create 172.16.34.23:6001 172.16.34.23:6002 172.16.34.24:6003 172.16.34.24:6004 172.16.34.29:6005 172.16.34.29:6006 --cluster-replicas 1 -a yfkn1#Z#1d
 ```
 
 ```
 redis-cli -h <redis-host> -p <redis-port> -a <redis-password>
 redis-cli -h 10.22.191.78 -p 6001 -a yfkn1#Z#1d
 redis-cli -h 172.16.34.23 -p 6001 -a yfkn1#Z#1d
-```
-
-```
-update ks_km_physical_cluster set zk_properties='{ "openSecure": true, "otherProps": { "zookeeper.sasl.clientconfig": "Client" } }' where id=2
 ```
 
 
@@ -200,7 +196,6 @@ curl -XGET -u elasticuser:yourpassword http://localhost:9200/_cluster/health\?pr
 
 ```
 curl -XGET localhost:9200/_cat/shards?h=index,shard,prirep,state,unassigned.reason| grep UNASSIGNED
-
 ```
 
 ```
@@ -210,9 +205,9 @@ curl -XGET -u elasticuser:yourpassword http://localhost:9200/_cluster/health
 ```
 docker run -d --name es -e "discovery.type=single-node" \
 -e "ES_JAVA_OPTS=-Xms2048m -Xmx2048m" \
--v /jinhetech_workspace/elk/es/es-data:/usr/share/elasticsearch/data \
--v /jinhetech_workspace/elk/es/es-plugins:/usr/share/elasticsearch/plugins \
--v /jinhetech_workspace/elk/es/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml \
+-v /jinhetech_workspace/ELK/es/es-data:/usr/share/elasticsearch/data \
+-v /jinhetech_workspace/ELK/es/es-plugins:/usr/share/elasticsearch/plugins \
+-v /jinhetech_workspace/ELK/es/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml \
 --privileged=true --network es-net -p 9201:9200 -p 9301:9300 \
 elasticsearch:8.7.0
 
@@ -229,20 +224,11 @@ docker run -it -d -p 5044:5044 \
 --name logstash --network es-net logstash:8.7.0
 
 docker run -d --network es-net --name filebeat --user=root \
--v /jinhetech_workspace/log/nginx:/var/log/nginx:ro \
 -v /jinhetech_workspace/logs:/var/lib/docker/volumes/xfile:ro \
 -v /jinhetech_workspace/elk/logstash/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro \
 -v /var/lib/docker/containers:/var/lib/docker/containers \
 -v /var/run/docker.sock:/var/run/docker.sock:ro \
 elastic/filebeat:8.7.0
-```
-
-```
-docker run --name nginx-test -p 8888:80  -v /jinhetech_workspace/log/nginx:/var/log/nginx  -d nginx
-```
-
-```
-
 ```
 
 
@@ -254,7 +240,7 @@ kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --par
 ```
 
 ```
-./kafka-console-producer.sh --broker-list 172.16.34.23:9094  --topic my-topic --producer.config ../config/producer.properties
+./kafka-console-producer.sh --broker-list localhost:9092 --topic my-topic --producer.config ../config/producer.properties
 ```
 
 ```
@@ -268,3 +254,156 @@ listener.name.sasl_ssl.scram-sha-256.sasl.jaas.config=org.apache.kafka.common.se
     username="admin" \
     password="admin-secret";
 ```
+
+```
+kafka-console-producer.sh --producer.config /opt/bitnami/kafka/config/producer.properties --bootstrap-server kafka1:9092 --topic test
+```
+
+
+
+压测数据
+
+- 生产者
+
+```
+./kafka-producer-perf-test.sh  --topic my-topic --record-size 100 --num-records 100000 --throughput -1 --producer-props bootstrap.servers=kafka1:9092,kafka2:9092,kafka3:9092
+```
+
+```
+100000 records sent, 28145.229384 records/sec (2.68 MB/sec), 919.54 ms avg latency, 1323.00 ms max latency, 904 ms 50th, 1047 ms 95th, 1084 ms 99th, 1120 ms 99.9th.
+```
+
+- 消费者
+
+```
+./kafka-consumer-perf-test.sh --broker-list kafka1:9092,kafka2:9092,kafka3:9092 --topic test --fetch-size 10000 --messages 10000000 --threads 1
+```
+
+
+
+**分区数=Tt /min（Tp，Tc）**
+
+Kafka机器数量（经验公式）=2 *（峰值生产速度*副本数/100）+1
+
+
+
+kafka-consumer-perf-test.sh --zookeeper 10.22.191.78:2181 --topic test --fetch-size 10000 --messages 10000000 --threads 1
+
+
+
+```
+redis-cli -h 218.94.154.74 -p 6879 -a jinhetech
+
+```
+
+
+
+
+
+```
+error_exit ()
+{
+    echo "ERROR: $1 !!"
+    exit 1
+}
+
+[ ! -e "$JAVA_HOME/bin/java" ] && JAVA_HOME=$HOME/jdk/java
+[ ! -e "$JAVA_HOME/bin/java" ] && JAVA_HOME=/usr/java
+[ ! -e "$JAVA_HOME/bin/java" ] && unset JAVA_HOME
+
+if [ -z "$JAVA_HOME" ]; then
+  if [ "Darwin" = "$(uname -s)" ]; then
+
+    if [ -x '/usr/libexec/java_home' ] ; then
+      export JAVA_HOME=`/usr/libexec/java_home`
+
+    elif [ -d "/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home" ]; then
+      export JAVA_HOME="/System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home"
+    fi
+  else
+    JAVA_PATH=`dirname $(readlink -f $(which javac))`
+    if [ "x$JAVA_PATH" != "x" ]; then
+      export JAVA_HOME=`dirname $JAVA_PATH 2>/dev/null`
+    fi
+  fi
+  if [ -z "$JAVA_HOME" ]; then
+        error_exit "Please set the JAVA_HOME variable in your environment, We need java(x64)! jdk8 or later is better!"
+  fi
+fi
+
+
+export WEB_SERVER="ks-km"
+export JAVA_HOME
+export JAVA="$JAVA_HOME/bin/java"
+export BASE_DIR=`cd $(dirname $0)/..; pwd`
+export CUSTOM_SEARCH_LOCATIONS=file:${BASE_DIR}/conf/
+
+
+#===========================================================================================
+# JVM Configuration
+#===========================================================================================
+
+JAVA_OPT="${JAVA_OPT} -server -Xms2g -Xmx2g -Xmn1g -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=320m"
+JAVA_OPT="${JAVA_OPT} -XX:-OmitStackTraceInFastThrow -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${BASE_DIR}/logs/java_heapdump.hprof"
+
+## jdk版本高的情况 有些 参数废弃了
+JAVA_MAJOR_VERSION=$($JAVA -version 2>&1 | sed -E -n 's/.* version "([0-9]*).*$/\1/p')
+if [[ "$JAVA_MAJOR_VERSION" -ge "9" ]] ; then
+  JAVA_OPT="${JAVA_OPT} -Xlog:gc*:file=${BASE_DIR}/logs/km_gc.log:time,tags:filecount=10,filesize=102400"
+else
+  JAVA_OPT="${JAVA_OPT} -Djava.ext.dirs=${JAVA_HOME}/jre/lib/ext:${JAVA_HOME}/lib/ext"
+  JAVA_OPT="${JAVA_OPT} -Xloggc:${BASE_DIR}/logs/km_gc.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
+
+fi
+
+JAVA_OPT="${JAVA_OPT} -jar ${BASE_DIR}/libs/${WEB_SERVER}.jar"
+JAVA_OPT="${JAVA_OPT} --spring.config.additional-location=${CUSTOM_SEARCH_LOCATIONS}"
+JAVA_OPT="${JAVA_OPT} --logging.config=${BASE_DIR}/conf/logback-spring.xml"
+JAVA_OPT="${JAVA_OPT} --server.max-http-header-size=524288"
+
+
+
+if [ ! -d "${BASE_DIR}/logs" ]; then
+  mkdir ${BASE_DIR}/logs
+fi
+
+echo "$JAVA ${JAVA_OPT}"
+
+# check the start.out log output file
+if [ ! -f "${BASE_DIR}/logs/start.out" ]; then
+  touch "${BASE_DIR}/logs/start.out"
+fi
+
+# start
+echo -e "---- 启动脚本 ------\n $JAVA ${JAVA_OPT}" > ${BASE_DIR}/logs/start.out 2>&1 &
+
+
+nohup $JAVA ${JAVA_OPT} >> ${BASE_DIR}/logs/start.out 2>&1 &
+
+echo "${WEB_SERVER} is starting，you can check the ${BASE_DIR}/logs/start.out"
+```
+
+```
+update ks_km_physical_cluster set zk_properties='{ "openSecure": true, "otherProps": { "zookeeper.sasl.clientconfig": "KafkaClient" } }' where id=1;
+```
+
+
+
+```
+
+    docker run -d --name kafka-exporter1 --network zookeeper-kafka -p 9308:9308 docker.io/bitnami/kafka-exporter --kafka.server=kafka1:9092 --kafka.version=3.4.1 --sasl.enabled --sasl.username=user --sasl.password=GiAszivMBB --sasl.mechanism=scram-sha256
+    docker run -d --name kafka-exporter2 --network zookeeper-kafka -p 9308:9308 docker.io/bitnami/kafka-exporter --kafka.server=kafka2:9092 --kafka.version=3.4.1 --sasl.enabled --sasl.username=user --sasl.password=GiAszivMBB --sasl.mechanism=scram-sha256
+    docker run -d --name kafka-exporter3 --network zookeeper-kafka -p 9308:9308 docker.io/bitnami/kafka-exporter --kafka.server=kafka3:9092 --kafka.version=3.4.1 --sasl.enabled --sasl.username=user --sasl.password=GiAszivMBB --sasl.mechanism=scram-sha256
+```
+
+
+
+```
+docker run -d --network es-net --name filebeat --user=root \
+-v /jinhetech_workspace/logs:/var/lib/docker/volumes/xfiles:ro \
+-v /jinhetech_workspace/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro \
+-v /var/lib/docker/containers:/var/lib/docker/containers \
+-v /var/run/docker.sock:/var/run/docker.sock:ro \
+elastic/filebeat:8.7.0
+```
+
